test/good/tuples/tuple5.px

a, b, c = t = 1, 2, true
x = y, z = t.1, t.0
if c do
    print z - y
