test/bad/basic/indent06.px

if true do
    if true do
    	y = 2
